--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./css/syle.css">
     <script defer src="./js/script,js"></script>
 </head>
+
 <body>
     <nav>
         <div>HOME</div>
@@ -15,5 +17,9 @@
         <div>WIDGETS</div>
         <div>LOG OUT</div>
     </nav>
+        <aside>SIDE BAR</aside>
+        <main>MAIN CONTENT</main>
+        <footer>FOOTER</footer>
 </body>
+
 </html>
